// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`saml-login Renders \`saml-login\` with redirect query and title 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="text-body-2"
  >
    Login with SAML
  </div>
  <a
    class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"
    href="https://canopsis/backend/api/v4/saml/auth?relayState=http%3A%2F%2Flocalhost%2Fredirect"
  >
    <span
      class="v-btn__content"
    >
    Saml config title
    </span>
  </a>
</div>
`;

exports[`saml-login Renders \`saml-login\` without redirect 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="text-body-2"
  >
    Login with SAML
  </div>
  <a
    class="v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"
    href="https://canopsis/backend/api/v4/saml/auth?relayState=http%3A%2F%2Flocalhost"
  >
    <span
      class="v-btn__content"
    >
    Login with SAML
    </span>
  </a>
</div>
`;
